WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171148
[MediaStream iOS] Release capture session when not producing data
https://bugs.webkit.org/show_bug.cgi?id=171148
Summary
[MediaStream iOS] Release capture session when not producing data
Eric Carlson
Reported
2017-04-21 16:09:04 PDT
Release the capture session when not producing data.
Attachments
Proposed patch.
(1.59 KB, patch)
2017-04-21 16:22 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2017-04-21 16:22:07 PDT
<
rdar://problem/29265868
>
Eric Carlson
Comment 2
2017-04-21 16:22:37 PDT
Created
attachment 307830
[details]
Proposed patch.
WebKit Commit Bot
Comment 3
2017-04-21 17:06:44 PDT
Comment on
attachment 307830
[details]
Proposed patch. Clearing flags on attachment: 307830 Committed
r215654
: <
http://trac.webkit.org/changeset/215654
>
WebKit Commit Bot
Comment 4
2017-04-21 17:06:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug