[MediaStream iOS] Release capture session when not producing data https://bugs.webkit.org/show_bug.cgi?id=171148 <rdar://problem/29265868>

Reviewed by Jer Noble.

On iOS, only one AVCaptureSession can be active at a time, so release a session whenever
it is told to stop producing data. The session will recreated if the capture source if/when
told to produce data again.

* platform/mediastream/mac/AVMediaCaptureSource.mm:
(WebCore::AVMediaCaptureSource::stopProducingData): Clear m_session to release the session.
It will be re-allocated if startProducingData is called later.


Canonical link: https://commits.webkit.org/188058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215654 268f45cc-cd09-0410-ab3c-d52691b4dbfc